# mycenter

./: CMakeLists.txt  CMakeLists_back.txt  Common.cpp  Common.hpp  Globaldef.hpp  InferenceAPP.cpp  InferenceAPP.hpp  Inference_Application.hpp  MyAPPAction.cpp  MyAPPAction.hpp  MyCenter.cpp  MyCenter.hpp  MyDB.cpp  MyDB.hpp  MyData.cpp  MyData.hpp  MyImage.cpp  MyImage.hpp  MyRegister.cpp  MyRegister.hpp  MyServer.cpp  MyServer.hpp  MyText.cpp  MyText.hpp  README.md  TODO.md  inference_application.hpp  main.cpp  main.cpp.old  main_back.cpp  myserver.hpp  test
App/: InferenceAPP.hpp  MyAPPAction.cpp
center/: MyCenter.cpp  MyCenter.hpp
common/: CMakeLists.txt
datatype/: MyText.cpp
doc/: appdoc.txt  gflagsscript.txt  glogscript.txt  postmessagedoc.txt
mycenter/: CMakeLists.txt
mycenter/App/: CMakeLists.txt  InferenceAPP.cpp  InferenceAPP.hpp  MyAPPAction.cpp  MyAPPAction.hpp
mycenter/DB/: CMakeLists.txt  MyDB.cpp  MyDB.hpp
mycenter/SendPrc/: SendPrc.hpp  jsonprc.cpp  jsonprc.hpp
mycenter/center/: BaseCenter.cpp  BaseCenter.hpp  CMakeLists.txt  MyCenter.cpp  MyCenter.hpp
mycenter/common/: CMakeLists.txt  Common.cpp  Common.hpp
mycenter/datatype/: CMakeLists.txt  MyData.cpp  MyData.hpp  MyImage.cpp  MyImage.hpp
mycenter/messagequeue/: CMakeLists.txt  messagequeue.cpp  messagequeue.hpp
mycenter/server/: CMakeLists.txt
server/: CMakeLists.txt
sqlscript/: app.sql
tool/delete/: CMakeLists.txt
tool/delete/testcurl/: test2.cpp
tool/delete/testthreadpool/: CMakeLists.txt  testthreadpool.cpp
tool/testserver/: myflask.py
